# oxirast-rust_web_framework

./: Cargo.toml  README.md
oxirast-cli/: Cargo.toml
oxirast-cli/src/: main.rs
oxirast-core/: Cargo.toml  README.md
oxirast-core/src/: lib.rs
oxirast-demo/: Cargo.toml
oxirast-demo/src/: lib.rs
oxirast-demo/src/components/: dashboard.rs  login.rs
oxirast-parser/: Cargo.toml
oxirast-parser/src/: lib.rs
oxirast-parser/tests/: macro_test.rs
public/: style.css
