[package]
name = "oxirast-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# The bridge between Rust and JavaScript
wasm-bindgen = "0.2"
# Direct access to JavaScript types (like Arrays and Functions)
js-sys = "0.3"

# Access to the browser's DOM APIs
[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "Event",
    "EventTarget",
    "Text", # <-- Added this!
]