[package]
name = "oxirast-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A fast, fine-grained WebAssembly frontend framework for Rust."
license = "MIT"
repository = "https://github.com/Michaelmk708/oxirast-rust_web_framework"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "NodeList",
    "Window",
    "Event",
    "EventTarget",
    "Text",
    "History",  
    "Location", 
    "console",  
]