[package]
name = "oxirast-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# This line is absolutely crucial. It tells the Rust compiler 
# that this crate generates code at compile-time.
proc-macro = true

[dependencies]
# 'syn' parses the raw token stream into a syntax tree
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
# 'quote' turns our parsed data back into Rust code
quote = "1.0"
# 'proc-macro2' gives us token streams we can easily manipulate
proc-macro2 = "1.0"